<resources>
    <string name="title_items_list">Items List</string>
    <string name="title_item_edit">Edit Item</string>
    <string name="title_item_add">Add Item</string>
    <string name="title_item_detail">Detail</string>

    <string name="error_read_item">Cannot read items</string>
    <string name="error_item_save">Cannot save the item</string>
    <string name="error_save_item">Cannot save item</string>
    <string name="error_item_delete">Cannot remove item</string>

    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_back">Back</string>

    <string name="pick_date">pick data</string>
    <string name="todo">TODO</string>
    <string name="app_name">ToDoApp</string>
    <string name="add">Add</string>
    <string name="add_item">Add a new item</string>
    <string name="info_item_saved">Item has been saved</string>
    <string name="text_item_edit">Edit Item Below</string>
    <string name="task_name">Task Name</string>
    <string name="dueDate">Due Date</string>
    <string name="notes">Notes</string>
    <string name="priority">Priority</string>
    <string name="status">Status</string>

    <string-array name="array_priorities">
        <item>LOW</item>
        <item>MEDIUM</item>
        <item>HIGH</item>
    </string-array>
    <string-array name="array_statuses">
        <item>TODO</item>
        <item>DONE</item>
    </string-array>
</resources>
